<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/back2"
        android:contentDescription="@null" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="16dp"
        tools:context=".MainActivity"
        tools:ignore="MissingClass">

        <TextView
            android:id="@+id/key_21"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:gravity="center|right"
            android:text="@string/key_0"
            android:textColor="@color/grey_back"
            android:textSize="96sp"
            app:layout_constraintBottom_toTopOf="@id/key_18"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="1"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/key_1"
            android:layout_width="@dimen/sizeLayout"
            android:layout_height="@dimen/sizeLayout"
            android:text="@string/key_plus_or_minus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/key_2"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="@dimen/cornerRadius"
            android:textSize="@dimen/textSize"
            android:backgroundTint="@color/green"/>

        <Button
            android:id="@+id/key_2"
            android:layout_width="@dimen/sizeLayout"
            android:layout_height="@dimen/sizeLayout"
            android:text="@string/key_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/key_1"
            app:layout_constraintEnd_toStartOf="@id/key_3"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="@dimen/cornerRadius"
            android:textSize="@dimen/textSize"
            android:backgroundTint="@color/grey"
            />

        <Button
            android:id="@+id/key_3"
            android:layout_width="@dimen/sizeLayout"
            android:layout_height="@dimen/sizeLayout"
            android:text="@string/key_drop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/key_2"
            app:layout_constraintEnd_toStartOf="@id/key_4"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="@dimen/cornerRadius"
            android:textSize="@dimen/textSize"
            android:backgroundTint="@color/green"
            />

        <Button
            android:id="@+id/key_4"
            android:layout_width="@dimen/sizeLayout"
            android:layout_height="@dimen/sizeLayout"
            android:text="@string/key_equally"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/key_3"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="@dimen/cornerRadius"
            android:backgroundTint="@color/green"
            android:textSize="@dimen/textSize"
            />

        <Button
            android:id="@+id/key_5"
            android:layout_width="@dimen/sizeLayout"
            android:layout_height="@dimen/sizeLayout"
            android:text="@string/key_1"
            app:layout_constraintBottom_toTopOf="@id/key_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/key_6"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="@dimen/cornerRadius"
            android:textSize="@dimen/textSize"
            android:backgroundTint="@color/grey"
            android:layout_marginBottom="@dimen/sizeLayout_marginBottom"
            />

        <Button
            android:id="@+id/key_6"
            android:layout_width="@dimen/sizeLayout"
            android:layout_height="@dimen/sizeLayout"
            android:text="@string/key_2"
            app:layout_constraintBottom_toTopOf="@id/key_2"
            app:layout_constraintStart_toEndOf="@id/key_1"
            app:layout_constraintEnd_toStartOf="@id/key_7"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="@dimen/cornerRadius"
            android:textSize="@dimen/textSize"
            android:backgroundTint="@color/grey"
            android:layout_marginBottom="@dimen/sizeLayout_marginBottom"
            />

        <Button
            android:id="@+id/key_7"
            android:layout_width="@dimen/sizeLayout"
            android:layout_height="@dimen/sizeLayout"
            android:text="@string/key_3"
            app:layout_constraintBottom_toTopOf="@id/key_3"
            app:layout_constraintStart_toEndOf="@id/key_6"
            app:layout_constraintEnd_toStartOf="@id/key_8"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="@dimen/cornerRadius"
            android:textSize="@dimen/textSize"
            android:backgroundTint="@color/grey"
            android:layout_marginBottom="@dimen/sizeLayout_marginBottom"
            />

        <Button
            android:id="@+id/key_8"
            android:layout_width="@dimen/sizeLayout"
            android:layout_height="@dimen/sizeLayout"
            android:text="@string/key_plus"
            app:layout_constraintBottom_toTopOf="@id/key_4"
            app:layout_constraintStart_toEndOf="@id/key_7"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:cornerRadius="@dimen/cornerRadius"
            android:textSize="@dimen/textSize"
            android:backgroundTint="@color/green"
            android:layout_marginBottom="@dimen/sizeLayout_marginBottom"
            />

        <Button
            android:id="@+id/key_9"
            android:layout_width="@dimen/sizeLayout"
            android:layout_height="@dimen/sizeLayout"
            android:text="@string/key_4"
            app:layout_constraintBottom_toTopOf="@id/key_5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/key_10"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="@dimen/cornerRadius"
            android:textSize="@dimen/textSize"
            android:backgroundTint="@color/grey"
            android:layout_marginBottom="@dimen/sizeLayout_marginBottom"
            />

        <Button
            android:id="@+id/key_10"
            android:layout_width="@dimen/sizeLayout"
            android:layout_height="@dimen/sizeLayout"
            android:text="@string/key_5"
            app:layout_constraintBottom_toTopOf="@id/key_6"
            app:layout_constraintStart_toEndOf="@id/key_9"
            app:layout_constraintEnd_toStartOf="@id/key_11"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="@dimen/cornerRadius"
            android:textSize="@dimen/textSize"
            android:backgroundTint="@color/grey"
            android:layout_marginBottom="@dimen/sizeLayout_marginBottom"
            />

        <Button
            android:id="@+id/key_11"
            android:layout_width="@dimen/sizeLayout"
            android:layout_height="@dimen/sizeLayout"
            android:text="@string/key_6"
            app:layout_constraintBottom_toTopOf="@id/key_7"
            app:layout_constraintStart_toEndOf="@id/key_10"
            app:layout_constraintEnd_toStartOf="@id/key_12"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="@dimen/cornerRadius"
            android:textSize="@dimen/textSize"
            android:backgroundTint="@color/grey"
            android:layout_marginBottom="@dimen/sizeLayout_marginBottom"
            />

        <Button
            android:id="@+id/key_12"
            android:layout_width="@dimen/sizeLayout"
            android:layout_height="@dimen/sizeLayout"
            android:text="@string/key_minus"
            app:layout_constraintBottom_toTopOf="@id/key_8"
            app:layout_constraintStart_toEndOf="@id/key_11"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:cornerRadius="@dimen/cornerRadius"
            android:textSize="@dimen/textSize"
            android:backgroundTint="@color/green"
            android:layout_marginBottom="@dimen/sizeLayout_marginBottom"
            />

        <Button
            android:id="@+id/key_13"
            android:layout_width="@dimen/sizeLayout"
            android:layout_height="@dimen/sizeLayout"
            android:text="@string/key_7"
            app:layout_constraintBottom_toTopOf="@id/key_9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/key_14"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="@dimen/cornerRadius"
            android:textSize="@dimen/textSize"
            android:backgroundTint="@color/grey"
            android:layout_marginBottom="@dimen/sizeLayout_marginBottom"
            />

        <Button
            android:id="@+id/key_14"
            android:layout_width="@dimen/sizeLayout"
            android:layout_height="@dimen/sizeLayout"
            android:text="@string/key_8"
            app:layout_constraintBottom_toTopOf="@id/key_10"
            app:layout_constraintStart_toEndOf="@id/key_13"
            app:layout_constraintEnd_toStartOf="@id/key_15"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="@dimen/cornerRadius"
            android:textSize="@dimen/textSize"
            android:backgroundTint="@color/grey"
            android:layout_marginBottom="@dimen/sizeLayout_marginBottom"
            />

        <Button
            android:id="@+id/key_15"
            android:layout_width="@dimen/sizeLayout"
            android:layout_height="@dimen/sizeLayout"
            android:text="@string/key_9"
            app:layout_constraintBottom_toTopOf="@id/key_11"
            app:layout_constraintStart_toEndOf="@id/key_14"
            app:layout_constraintEnd_toStartOf="@id/key_16"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="@dimen/cornerRadius"
            android:textSize="@dimen/textSize"
            android:backgroundTint="@color/grey"
            android:layout_marginBottom="@dimen/sizeLayout_marginBottom"
            />

        <Button
            android:id="@+id/key_16"
            android:layout_width="@dimen/sizeLayout"
            android:layout_height="@dimen/sizeLayout"
            android:text="@string/key_multiplying"
            app:layout_constraintBottom_toTopOf="@id/key_12"
            app:layout_constraintStart_toEndOf="@id/key_15"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="@dimen/cornerRadius"
            android:textSize="@dimen/textSize"
            android:backgroundTint="@color/green"
            android:layout_marginBottom="@dimen/sizeLayout_marginBottom"
            />

        <Button
            android:id="@+id/key_17"
            android:layout_width="@dimen/sizeLayout"
            android:layout_height="@dimen/sizeLayout"
            android:text="@string/key_clear"
            app:layout_constraintBottom_toTopOf="@id/key_13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/key_18"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="@dimen/cornerRadius"
            android:textSize="@dimen/textSize"
            android:textColor="@color/red"
            android:backgroundTint="@color/grey"
            android:layout_marginBottom="@dimen/sizeLayout_marginBottom"
            />

        <Button
            android:id="@+id/key_18"
            android:layout_width="@dimen/sizeLayout"
            android:layout_height="@dimen/sizeLayout"
            android:text="@string/key_parentheses"
            app:layout_constraintBottom_toTopOf="@id/key_14"
            app:layout_constraintStart_toEndOf="@id/key_17"
            app:layout_constraintEnd_toStartOf="@id/key_19"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="@dimen/cornerRadius"
            android:textSize="@dimen/textSize"
            android:backgroundTint="@color/green"
            android:layout_marginBottom="@dimen/sizeLayout_marginBottom"
            />

        <Button
            android:id="@+id/key_19"
            android:layout_width="@dimen/sizeLayout"
            android:layout_height="@dimen/sizeLayout"
            android:text="@string/key_percent"
            app:layout_constraintBottom_toTopOf="@id/key_15"
            app:layout_constraintStart_toEndOf="@id/key_18"
            app:layout_constraintEnd_toStartOf="@id/key_20"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="@dimen/cornerRadius"
            android:textSize="@dimen/textSize"
            android:backgroundTint="@color/green"
            android:layout_marginBottom="@dimen/sizeLayout_marginBottom"
            />

        <Button
            android:id="@+id/key_20"
            android:layout_width="@dimen/sizeLayout"
            android:layout_height="@dimen/sizeLayout"
            android:text="@string/key_division"
            app:layout_constraintBottom_toTopOf="@id/key_16"
            app:layout_constraintStart_toEndOf="@id/key_19"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="@dimen/cornerRadius"
            android:textSize="@dimen/textSize"
            android:backgroundTint="@color/green"
            android:layout_marginBottom="@dimen/sizeLayout_marginBottom"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>